[SONAR] fix some more issues (#7713)